Rename package to "chouse-orm" and add .npmignore for examples

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "clickhouse-orm",
+  "name": "chouse-orm",
   "version": "1.0.0",
   "description": "A Sequelize-like ORM for ClickHouse database",
   "main": "index.js",
